gitops/apps/whitelist-portal/ingress/ingress-netset.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whitelist-ingress-netset
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: ingress-netset-secret
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  tls:
  - hosts:
    - whitelist.konst.fish
    secretName: whitelist-tls
  ingressClassName: nginx
  rules:
  - host: "whitelist.konst.fish"
    http:
      paths:
      - pathType: Prefix
        path: "/api/v1/list"
        backend:
          service:
            name: whitelist-netset
            port:
              number: 8080
